# fast_assert

./: Cargo.toml  README.md
fast_assert/: Cargo.toml  README.md
fast_assert/src/: helpers.rs  lib.rs
test_crate/: Cargo.toml
test_crate/src/: fast_assert_macro_tests.rs  lib.rs
